# wms-desktop

./: .gitignore  README.md  package-lock.json  package.json  plan-weekly-board.md  tsconfig.app.json
backend/: Dockerfile  index.js  main.py  package.json
backend/migrations/: 0001_init.sql
desktop/: README.md
desktop/src/: README.md  index.html  main.js
desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
desktop/src-tauri/src/: main.rs
frontend/: index.html
frontend/src/: index.css
frontend/src/app/: App.tsx
frontend/src/lib/: tauri.ts
frontend/src/ui/: AppShell.tsx  StatusBadge.tsx
frontend/src/views/: ClaimDetailsPage.tsx  ClaimsPage.tsx  CreateNewClaimPage.tsx  DashboardPage.tsx  HomePage.tsx  SettingsPage.tsx  VehicleDetailsPage.tsx
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile-scanner/: App.tsx  app.json  package.json
mobile-scanner/android/: settings.gradle
mobile-scanner/android/app/: build.gradle
mobile-scanner/src/: ScanScreen.tsx
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/vintrace/: Info.plist
mobile/ios/vintrace.xcodeproj/: project.pbxproj
mobile/src/api/: client.ts
scr-tauri/: tauri.conf.json
scr-tauri/migrations/: 0001_init.sql  0002_outbox_status.sql
scr-tauri/src/: lib.rs  sync.rs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/domain/: claims.ts
src/lib/: db.ts
src/repo/: claimsRepo.ts
src/router/: Router.tsx
src/views/: ClaimsPage.tsx  VehicleDetailsPage.tsx
(+20 files in other folders)
