'''
[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "global-shortcut-all", "dialog-all", "icon-png", "process-command-api", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-release", branch = "rs-1", features = ["colored"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-release", branch = "rs-1" }
chrono = { version = "0.4.35", features = ["serde"] }
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.36.0", features = ["time"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
mobile = ["tauri/mobile"]
''